fix warning 6